--- a/01.tex
+++ b/01.tex
@@ -1,8 +1,8 @@
-\Section{Базовые определения и SETH}{2 сентября}
+\Section{Оценки под SETH}{2 сентября}
 
 \subsection{Введение}
 
-\textit{Тут были рассуждения на тему, что такое и зачем нужно Fine-grained complexity. Мораль: мы отвратительны в доказательстве нижних оценок. Поэтому мы делаем следующее: берём задачу, которую очень долго не могут решить, рассматриваем её как гипотезу и в этом предположении строим условные нижние оценки.}
+\textit{Зачем нужно Fine-grained complexity? Мы отвратительны в доказательстве нижних оценок. Поэтому мы делаем следующее: берём задачу, которую очень долго не могут решить, рассматриваем её как гипотезу и в этом предположении строим условные нижние оценки на другие задачи.}
 
 \begin{problem}($k$-SAT)\\
    Дана формула на $n$ логических переменных в КНФ, такая что размер каждого клоза не больше $k$. Проверить, существует ли означивание переменных, выполняющее формулу.
@@ -29,7 +29,7 @@
 \end{remark}
 
 \begin{remark}
-    Если мы сломаем \s{3-SUM}-conjecture, то просто получим более быстрый алгоритм для \s{3-SUM}. Если сломаем ETH, то перевернём мир схемной сложности (\TODO: ссылка на теорему про ETH и $E^{NP}$).
+    Если мы сломаем \s{3-Sum}-conjecture, то просто получим более быстрый алгоритм для \s{3-Sum}. Если сломаем ETH, то перевернём мир схемной сложности (\TODO: ссылка на теорему про ETH и $E^{NP}$).
 \end{remark}
 
 \begin{definition}(Fine-grained сведение)\\
@@ -41,19 +41,19 @@
     \end{itemize}
 \end{definition}
 
-\subsection{Нижние оценки на основе SETH}
+\subsection{Нижние оценки под SETH}
 
-Вместо прям оценок будем писать только сведения.
+Здесь и далее вместо условных нижних оценок будет писать только fg-сведения. 
 
 \begin{problem}(\s{Orthogonal Vectors (OV)})
-   Дано $2$ набора $A$ и $B$ из $n$ векторов из $\{0, 1\}^d$, где $d = o(n)$. Нужно узнать существуют ли $a \in A, b \in B$, такие что: $\sum_{i = 1}^{d} a_i b_i = 0$.
+   Даны $2$ набора $A$ и $B$ из $n$ векторов из $\{0, 1\}^d$, где $d = o(n)$. Нужно узнать существуют ли $a \in A, b \in B$, такие что: $\sum_{i = 1}^{d} a_i b_i = 0$.
 \end{problem}
 
-\begin{reduction}(\s{$k$-SAT} $\xto{2^n, n^2}$ \s{Orthogonal Vectors})\\
+\begin{reduction}(\s{$k$-SAT} $\xto{2^n, n^2}$ \s{Orthogonal Vectors})~\cite{Patrascu2010}\\
     Построим наборы размера $2^{n/2}$ и размерности $m$. В первом наборе на $i$-ой позиции поставим 0, если данное означивание первых $n/2$ переменных выполняет $i$-ый клоз. Во втором аналогично. Теперь скалярное произведение двух наборов будет равно 0 $\EQ$ данное означивание выполняет все клозы.
 \end{reduction}
 
-\begin{problem}(\s{$d$-Hitting-Set})\\
+\begin{problem}(\s{$d$-Hitting Set})\\
    Дан универс $\cool{U}$, $|\cool{U}| = n$ и набор $\cool{S}$ подмножеств $U$ мощности не более $d$. Проверить, существует ли $X \subseteq \cool{U}$, $|X| \le k$, такой что $\forall i, S_i \cap X \neq \varnothing$.
 \end{problem}
 
@@ -89,7 +89,7 @@
 \end{problem}
 
 \begin{exerc}
-    Покажите нижнюю оценку $n^{\Omega(k)}$ для \s{$k$-SUM}, построив цепочку fg-сведений\\ \s{3-SAT} $\to$ \s{1-in-3-SAT} $\to$ \s{$k$-SUM} (в \s{1-in-3-SAT} хотим выполнить клоз ровно одной переменной)
+    Покажите нижнюю оценку $n^{\Omega(k)}$ для \s{$k$-Sum}, построив цепочку fg-сведений\\ \s{3-SAT} $\to$ \s{1-in-3-SAT} $\to$ \s{$k$-Sum} (в \s{1-in-3-SAT} хотим выполнить клоз ровно одной переменной)
 \end{exerc}
 
 
