--- a/bib.bib
+++ b/bib.bib
@@ -52,3 +52,125 @@
     numpages = {24},
     keywords = {reduction, satisfiability, strong exponential time hypothesis, Optimal growth rate}
 }
+
+
+@inbook{Patrascu2010,
+    author = {Mihai Pătraşcu and Ryan Williams},
+    title = {On the possibility of faster SAT algorithms},
+    booktitle = {Proceedings of the 2010 Annual ACM-SIAM Symposium on Discrete Algorithms  (SODA)},
+    chapter = {},
+    year = {2010},
+    pages = {1065-1075},
+    doi = {10.1137/1.9781611973075.86},
+    URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611973075.86},
+    eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611973075.86}
+}
+
+@inproceedings{Garey1974,
+    author = {Garey, M. R. and Johnson, D. S. and Stockmeyer, L.},
+    title = {Some Simplified NP-Complete Problems},
+    year = {1974},
+    isbn = {9781450374231},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/800119.803884},
+    doi = {10.1145/800119.803884},
+    abstract = {It is widely believed that showing a problem to be NP-complete is tantamount to proving its computational intractability. In this paper we show that a number of NP-complete problems remain NP-complete even when their domains are substantially restricted. First we show the completeness of SIMPLE MAX CUT (MAX CUT with edge weights restricted to value 1), and, as a corollary, the completeness of the OPTIMAL LINEAR ARRANGEMENT problem. We then show that even if the domains of the NODE COVER and DIRECTED HAMILTONIAN PATH problems are restricted to planar graphs, the two problems remain NP-complete, and that these and other graph problems remain NP-complete even when their domains are restricted to graphs with low node degrees. For GRAPH 3-COLORABILITY, NODE COVER, and UNDIRECTED HAMILTONIAN CIRCUIT, we determine essentially the lowest possible upper bounds on node degree for which the problems remain NP-complete.},
+    booktitle = {Proceedings of the Sixth Annual ACM Symposium on Theory of Computing},
+    pages = {47–63},
+    numpages = {17},
+    location = {Seattle, Washington, USA},
+    series = {STOC '74}
+}
+
+@article{Cygan2017,
+    author = {Cygan, Marek and Fomin, Fedor V. and Golovnev, Alexander and Kulikov, Alexander S. and Mihajlin, Ivan and Pachocki, Jakub and Soca\l{}a, Arkadiusz},
+    title = {Tight Lower Bounds on Graph Embedding Problems},
+    year = {2017},
+    issue_date = {June 2017},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    volume = {64},
+    number = {3},
+    issn = {0004-5411},
+    url = {https://doi.org/10.1145/3051094},
+    doi = {10.1145/3051094},
+    abstract = {We prove that unless the Exponential Time Hypothesis (ETH) fails, deciding if there is a homomorphism from graph G to graph H cannot be done in time |V(H)|o(|V(G)|). We also show an exponential-time reduction from Graph Homomorphism to Subgraph Isomorphism. This rules out (subject to ETH) a possibility of |V(H)|o(|V(H)|)-time algorithm deciding if graph G is a subgraph of H. For both problems our lower bounds asymptotically match the running time of brute-force algorithms trying all possible mappings of one graph into another. Thus, our work closes the gap in the known complexity of these fundamental problems.Moreover, as a consequence of our reductions, conditional lower bounds follow for other related problems such as Locally Injective Homomorphism, Graph Minors, Topological Graph Minors, Minimum Distortion Embedding and Quadratic Assignment Problem.},
+    journal = {J. ACM},
+    month = {jun},
+    articleno = {18},
+    numpages = {22},
+    keywords = {Lower bounds, graph embedding, exponential time hypothesis, graph homomorphism, subgraph isomorphism}
+}
+
+
+@inbook{Chan2020,
+    author = {Timothy M. Chan and Qizheng He},
+    title = {Reducing 3SUM to Convolution-3SUM},
+    booktitle = {Symposium on Simplicity in Algorithms (SOSA)},
+    chapter = {},
+    pages = {1-7},
+    doi = {10.1137/1.9781611976014.1},
+    URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611976014.1},
+    eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611976014.1}
+}
+
+
+@article{Lipton1979,
+    author = {Lipton, Richard J. and Tarjan, Robert Endre},
+    title = {A Separator Theorem for Planar Graphs},
+    journal = {SIAM Journal on Applied Mathematics},
+    volume = {36},
+    number = {2},
+    pages = {177-189},
+    year = {1979},
+    doi = {10.1137/0136016},
+
+    URL = { 
+            https://doi.org/10.1137/0136016
+        
+    },
+    eprint = { 
+            https://doi.org/10.1137/0136016
+        
+    }
+}
+
+@Inbook{Karp1972,
+    author="Karp, Richard M.",
+    editor="Miller, Raymond E.
+    and Thatcher, James W.
+    and Bohlinger, Jean D.",
+    title="Reducibility among Combinatorial Problems",
+    bookTitle="Complexity of Computer Computations: Proceedings of a symposium on the Complexity of Computer Computations, held March 20--22, 1972, at the IBM Thomas J. Watson Research Center, Yorktown Heights, New York, and sponsored by the Office of Naval Research, Mathematics Program, IBM World Trade Corporation, and the IBM Research Mathematical Sciences Department",
+    year="1972",
+    publisher="Springer US",
+    address="Boston, MA",
+    pages="85--103",
+    abstract="A large class of computational problems involve the determination of properties of graphs, digraphs, integers, arrays of integers, finite families of finite sets, boolean formulas and elements of other countable domains. Through simple encodings from such domains into the set of words over a finite alphabet these problems can be converted into language recognition problems, and we can inquire into their computational complexity. It is reasonable to consider such a problem satisfactorily solved when an algorithm for its solution is found which terminates within a number of steps bounded by a polynomial in the length of the input. We show that a large number of classic unsolved problems of covering, matching, packing, routing, assignment and sequencing are equivalent, in the sense that either each of them possesses a polynomial-bounded algorithm or none of them does.",
+    isbn="978-1-4684-2001-2",
+    doi="10.1007/978-1-4684-2001-2_9",
+    url="https://doi.org/10.1007/978-1-4684-2001-2_9"
+}
+
+@article{Fomin2021,
+    author = {Fomin, Fedor V. and Lokshtanov, Daniel and Mihajlin, Ivan and Saurabh, Saket and Zehavi, Meirav},
+    title = {Computation of Hadwiger Number and Related Contraction Problems: Tight Lower Bounds},
+    year = {2021},
+    issue_date = {June 2021},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    volume = {13},
+    number = {2},
+    issn = {1942-3454},
+    url = {https://doi.org/10.1145/3448639},
+    doi = {10.1145/3448639},
+    abstract = {We prove that the Hadwiger number of an n-vertex graph G (the maximum size of a clique minor in G) cannot be computed in time no(n), unless the Exponential Time Hypothesis (ETH) fails. This resolves a well-known open question in the area of exact exponential algorithms. The technique developed for resolving the Hadwiger number problem has a wider applicability. We use it to rule out the existence of no(n)-time algorithms (up to the ETH) for a large class of computational problems concerning edge contractions in graphs.},
+    journal = {ACM Trans. Comput. Theory},
+    month = {mar},
+    articleno = {10},
+    numpages = {25},
+    keywords = {exact algorithms, exponential-time hypothesis, Hadwiger number, edge contraction problems}
+}
+
+
